# wgpu-things

./: Cargo.toml  LICENSE  README.md  build.rs  index.html
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
